[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "block2"
version = "0.1.10"
description = "An efficient MPO implementation of DMRG for quantum chemistry."
authors = [
  {name = "Huanchen Zhai", email = "hczhai.ok@gmail.com"},
  {name = "Henrik R. Larsson"},
  {name = "Seunghoon Lee"},
  {name = "Zhi-Hao Cui"}
]
readme = "README.md"
dependencies = [
    "mkl==2021.4",
    "mkl-include",
    "intel-openmp",
    "numpy",
    "scipy",
    "psutil",
    "pybind11!=2.10.3,!=2.10.4,!=2.11.0,!=2.11.1",
]

[project.urls]
Repository = "https://github.com/block-hczhai/block2-preview"
Documentation = "https://block2.readthedocs.io/en/latest/"

[project.license]
file = "LICENSE"

[tool.scikit-build]
cmake.version = ">=3.19"
cmake.verbose = true
logging.level = "INFO"
cmake.build-type = "Release"
wheel.packages = ["pyblock2"]

[tool.scikit-build.cmake.define]
USE_MKL = "ON"
BUILD_LIB = "ON"
LARGE_BOND = "ON"
USE_KSYMM = "OFF"
USE_COMPLEX = "ON"
USE_SINGLE_PREC = "ON"
USE_SG = "ON"
USE_SANY = "ON"
